agregue formulario de contacto

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li><a href="#">Jogging</a></li>
         
                     <li><a href="#">Ubicación</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </navbar>
 
