--- a/chombas.html
+++ b/chombas.html
@@ -5,20 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/chombas.css">
-    <title>Document</title>
+    <title>Chombas</title>
 </head>
 <body>
-    <navbar>
-        <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Chombas</a></li>
-            <li><a href="#">Remeras</a></li>
-            <li><a href="#">Jogging</a></li>
+    <header>
 
-            <li><a href="#">Ubicación</a></li>
-            <li><a href="#">Contacto</a></li>
-        </ul>
-    </navbar>
+        <div class="box box_izq">
+
+            <img src="img/cross-arrows.png" alt="">
+
+        </div>
+        <div class="box box_der">
+            <navbar>
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="chombas.html">Chombas</a></li>
+                    <li><a href="#">Remeras</a></li>
+                    <li><a href="#">Jogging</a></li>
+        
+                    <li><a href="#">Ubicación</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </navbar>
+        </div>
+    </header>
+
 
 
 </body>
