--- a/contacto.html
+++ b/contacto.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,11 +6,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/contacto.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
+    
     <title>Formulario</title>
 </head>
 
 <body>
+
+    <header>
+
+        <div class="box box_izq">
+
+            <img src="img/cross-arrows.png" alt="">
+
+        </div>
+        <div class="box box_der">
+            <navbar>
+                <ul>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Chombas</a></li>
+                    <li><a href="#">Remeras</a></li>
+                    <li><a href="#">Jogging</a></li>
+        
+                    <li><a href="#">Ubicación</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </navbar>
+        </div>
+
+    </header>
 
     <div class="container">
         <div class="py-5">
