--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="es">
-
+<html lang="en">
 <head>
-    <title>TP</title>
-    <link rel="stylesheet" href="css/style.css" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/index.css">
+  <title>TPO</title>
 </head>
 
 <body>
@@ -19,7 +21,7 @@
             <navbar>
                 <ul>
                     <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Chombas</a></li>
+                    <li><a href="chombas.html">Chombas</a></li>
                     <li><a href="#">Remeras</a></li>
                     <li><a href="#">Jogging</a></li>
         
@@ -27,64 +29,32 @@
                     <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </navbar>
-
-
-
         </div>
-
-
-
-
     </header>
 
 
 
 
-    <!-- <navbar>
-        <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Chombas</a></li>
-            <li><a href="#">Remeras</a></li>
-            <li><a href="#">Jogging</a></li>
-
-            <li><a href="#">Ubicación</a></li>
-            <li><a href="#">Contacto</a></li>
-        </ul>
-    </navbar> -->
-
     <section id="portada">
-        <img src="https://drive.google.com/uc?export=download&id=169NiDDWVvONMz3URO9PBnwZEZVHS93xp" />
+        <img src="img/portada.jpg.webp" />
     </section>
 
     <h1>Visitar por Categorias</h1>
 
     <div class="bloque1">
         <div class="img_ropa">
-            <img src="https://drive.google.com/uc?export=download&id=1CPvaPp4gyL26BSh7UyNcLW9wi5UWI241" alt="">
+            <img src="img/Chombas.png" alt="">
             <a href="#">Chombas</a>
         </div>
         <div class="img_ropa">
-            <img src="https://drive.google.com/uc?export=download&id=1Kaushtw_PKVh2U--mEw_4qNszIOgK95Q" alt="">
+            <img src="img/Remeras cuello redondo.png" alt="">
             <a href="">Remeras</a>
         </div>
         <div class="img_ropa">
-            <img src="https://drive.google.com/uc?export=download&id=1JSUU4VVEmlByaEvU4AeAyI8_9IBY307R" />
+            <img src="img/Joggins.png" />
             <a href="">Jogging</a>
         </div>
     </div>
-
-    <!--     
-    <div class="bloque2">
-        <div class="link">
-            <a href="#">Chombas</a>
-        </div>
-        <div class="link">
-            <a href="">Remeras Cuello Redondo</a>
-        </div>
-        <div class="link">
-            <a href="#">Pantalones Jogging</a>
-        </div>
-    </div> -->
 
 
     <footer>
