Ubicación con iframe
Agrego el html de ubicación. Agregué los href en el header del Index para ir navegando página por página.

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         <div class="box box_der">
             <navbar>
                 <ul>
-                    <li><a href="#">Inicio</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="chombas.html">Chombas</a></li>
-                    <li><a href="#">Remeras</a></li>
-                    <li><a href="#">Jogging</a></li>
+                    <li><a href="remeras.html">Remeras</a></li>
+                    <li><a href="joggings.html">Jogging</a></li>
         
-                    <li><a href="#">Ubicación</a></li>
+                    <li><a href="ubicacion.html">Ubicación</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </navbar>
