--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/index.css">
-  <title>TPO</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/index.css">
+    <title>TPO</title>
 </head>
 
 <body>
@@ -24,7 +25,7 @@
                     <li><a href="chombas.html">Chombas</a></li>
                     <li><a href="remeras.html">Remeras</a></li>
                     <li><a href="joggings.html">Jogging</a></li>
-        
+
                     <li><a href="ubicacion.html">Ubicación</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                 </ul>
@@ -58,6 +59,23 @@
 
 
     <footer>
+        <div class="linea1"> 
+            <a href="https://www.facebook.com" target="_blank"><img src="./img/facebook.png" alt="icono Fb"></a>
+            <a href="https://www.instagram.com" target="_blank"><img src="./img/instagram.png" alt="icono instagram"></a>
+            <a href="https://twitter.com" target="_blank"><img src="./img/gorjeo.png" alt="icono twitter"></a>
+           
+        </div>
+
+        <div class="linea2">
+            <img src="./img/location-2.png" alt="">
+            <img src="./img/telephone-handle-silhouette.png" alt="">
+            <img src="./img/email.png" alt="">
+
+
+
+
+        </div>
+
     </footer>
 
 </body>
