agregue animacion al logo cruz

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <title>TPO</title>
 </head>
 
@@ -15,7 +19,7 @@
 
         <div class="box box_izq">
 
-            <img src="img/cross-arrows.png" alt="">
+            <img class="animate__animated animate__rotateIn" src="img/cross-arrows.png" alt="">
 
         </div>
         <div class="box box_der">
