--- a/contacto.html
+++ b/contacto.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/contacto.css">
+    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
-    
+
     <title>Formulario</title>
 </head>
 
@@ -17,19 +16,17 @@
     <header>
 
         <div class="box box_izq">
-
-            <img src="img/cross-arrows.png" alt="">
-
+            <img class="animate__animated animate__rotateIn" src="img/cross-arrows.png" alt="">
         </div>
+
         <div class="box box_der">
-            <navbar>
+            <navbar class="">
                 <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Chombas</a></li>
-                    <li><a href="#">Remeras</a></li>
-                    <li><a href="#">Jogging</a></li>
-        
-                    <li><a href="#">Ubicación</a></li>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="chombas.html">Chombas</a></li>
+                    <li><a href="remeras.html">Remeras</a></li>
+                    <li><a href="joggings.html">Jogging</a></li>
+                    <li><a href="ubicacion.html">Ubicación</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </navbar>
