--- a/index.html
+++ b/index.html
@@ -12,21 +12,18 @@
 
 <body>
 
-    <header>
-
+    <header id="header" class="sticky">
         <div class="box box_izq">
-
             <img class="animate__animated animate__rotateIn" src="img/cross-arrows.png" alt="">
-
         </div>
+
         <div class="box box_der">
-            <navbar>
+            <navbar class="">
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="chombas.html">Chombas</a></li>
                     <li><a href="remeras.html">Remeras</a></li>
                     <li><a href="joggings.html">Jogging</a></li>
-
                     <li><a href="ubicacion.html">Ubicación</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                 </ul>
@@ -34,75 +31,58 @@
         </div>
     </header>
 
+    <section id="contenido">
+        <div id="portada">
+            <img src="img/portada.jpg.webp" />
+        </div>
 
+        <h1>Visitar por Categorias</h1>
 
-
-    <section id="portada">
-        <img src="img/portada.jpg.webp" />
+        <div class="bloque1">
+            <div class="img_ropa">
+                <img src="img/Chombas.png" alt="">
+                <a href="#">Chombas</a>
+            </div>
+            <div class="img_ropa">
+                <img src="img/Remeras cuello redondo.png" alt="">
+                <a href="">Remeras</a>
+            </div>
+            <div class="img_ropa">
+                <img src="img/Joggins.png" />
+                <a href="">Jogging</a>
+            </div>
+        </div>
     </section>
 
-    <h1>Visitar por Categorias</h1>
-
-    <div class="bloque1">
-        <div class="img_ropa">
-            <img src="img/Chombas.png" alt="">
-            <a href="#">Chombas</a>
-        </div>
-        <div class="img_ropa">
-            <img src="img/Remeras cuello redondo.png" alt="">
-            <a href="">Remeras</a>
-        </div>
-        <div class="img_ropa">
-            <img src="img/Joggins.png" />
-            <a href="">Jogging</a>
-        </div>
-    </div>
-
-
-    <footer>
+    <footer id="footer">
         <div class="linea1">
-            <a href="https://www.facebook.com" target="_blank"><img src="./img/facebook.png" alt="icono Fb"></a>
-            <a href="https://www.instagram.com" target="_blank"><img src="./img/instagram.png"
-                    alt="icono instagram"></a>
-            <a href="https://twitter.com" target="_blank"><img src="./img/gorjeo.png" alt="icono twitter"></a>
+            <a href="https://www.facebook.com" target="_blank">
+                <img src="./img/facebook.png" alt="icono Fb">
 
+            </a>
+            <a href="https://www.instagram.com" target="_blank">
+                <img src="./img/instagram.png" alt="icono instagram">
+            </a>
+            <a href="https://twitter.com" target="_blank">
+                <img src="./img/gorjeo.png" alt="icono twitter">
+            </a>
         </div>
 
         <div class="linea2">
             <div>
                 <img class="iconos" src="./img/location-2.png" alt="">
+                <a href="ubicacion.html">Nazca y Avellaneda - C.A.B.A.</a>
             </div>
-            <div class="iconos">
-                <p>
-                    <a href="ubicacion.html">Nazca y Avellaneda - C.A.B.A.</a>
-                </p>
-                <!-- <p>Nazca y Avellaneda - C.A.B.A.</p> -->
-
-            </div>
-
             <div>
                 <img class="iconos" src="./img/telephone-handle-silhouette.png" alt="">
-
-            </div>
-            <div class="iconos">
-                <p>12345678</p>
-
+                <span>12345678</span>
             </div>
             <div>
                 <img class="iconos" src="./img/email.png" alt="">
-
+                <a href="mailto:flechacruz@gmail.com">flechacruz@gmail.com</a>
             </div>
-            <div class="iconos">
-                
-                <p>
-                    <a href="mailto:flechacruz@gmail.com"> flechacruz@gmail.com</a>
-                </p>
-            </div>
-            
         </div>
-
     </footer>
-
 </body>
 
 </html>
