--- a/contacto.html
+++ b/contacto.html
@@ -12,51 +12,40 @@
 </head>
 
 <body>
-
-    <header>
-
-        <div class="box box_izq">
-            <img class="animate__animated animate__rotateIn" src="img/cross-arrows.png" alt="">
-        </div>
-
-        <div class="box box_der">
-            <navbar class="">
-                <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="chombas.html">Chombas</a></li>
-                    <li><a href="remeras.html">Remeras</a></li>
-                    <li><a href="joggings.html">Jogging</a></li>
-                    <li><a href="ubicacion.html">Ubicación</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                </ul>
-            </navbar>
-        </div>
-
+    <header id="header" class="sticky">
     </header>
 
-    <div class="container">
-        <div class="py-5">
-            <div class="mb-3">
-                <label for="nombre" class="form-label">Nombre:</label>
-                <input type="email" class="form-control" id="nombre" placeholder="">
-            </div>
-            <div class="mb-3">
-                <label for="celu" class="form-label">Celular:</label>
-                <input type="email" class="form-control" id="celu" placeholder="">
-            </div>
-            <div class="mb-3">
-                <label for="email" class="form-label">Email:</label>
-                <input type="email" class="form-control" id="email" placeholder="">
-            </div>
-            <div class="mb-3">
-                <label for="texto" class="form-label">Comentario:</label>
-                <textarea class="form-control" id="texto" rows="3"></textarea>
-            </div>
-            <div class="mb-3">
-                <button class="btn btn-primary" type="submit" disabled>Enviar</button>
-            </div>
+    <section class="pt-5 form mb-5">
+        <div
+            class="container rounded-4 col-xxl-4 col-xl-6 col-lg-6 col-md-8 col-sm-8 col-8 bg-secondary bg-opacity-50 mt-5">
+            <form class="py-4">
+                <div class="mb-3">
+                    <label for="nombre" class="form-label">Nombre:</label>
+                    <input type="email" class="form-control" id="nombre" placeholder="">
+                </div>
+                <div class="mb-3">
+                    <label for="celu" class="form-label">Celular:</label>
+                    <input type="email" class="form-control" id="celu" placeholder="">
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email:</label>
+                    <input type="email" class="form-control" id="email" placeholder="">
+                </div>
+                <div class="mb-3">
+                    <label for="texto" class="form-label">Comentario:</label>
+                    <textarea class="form-control" id="texto" rows="3"></textarea>
+                </div>
+                <div class="mb-3">
+                    <button class="btn btn-primary" type="submit" disabled>Enviar</button>
+                </div>
+            </form>
         </div>
-    </div>
+    </section>
+
+    <footer id="footer">
+    </footer>
+
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
