--- a/ubicacion.html
+++ b/ubicacion.html
@@ -10,22 +10,8 @@
 </head>
 
 <body>
-    <header>
-        <div class="box box_izq">
-            <img src="img/cross-arrows.png" alt="">
-        </div>
-        <div class="box box_der">
-            <navbar>
-                <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="chombas.html">Chombas</a></li>
-                    <li><a href="remeras.html">Remeras</a></li>
-                    <li><a href="joggings.html">Jogging</a></li>
-                    <li><a href="ubicacion.html">Ubicación</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                </ul>
-            </navbar>
 
+    <header id="header" class="sticky">
     </header>
 
     <h1>Ubicación</h1>
@@ -37,6 +23,11 @@
             width="600" height="450" style="border:0;" allowfullscreen=""></iframe>
     </div>
     <p>Av. Nazca y Av. Avellaneda - CABA</p>
+
+    <footer id="footer">
+    </footer>
+
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
