--- a/contacto.html
+++ b/contacto.html
@@ -21,11 +21,11 @@
             <form class="py-4">
                 <div class="mb-3">
                     <label for="nombre" class="form-label">Nombre:</label>
-                    <input type="email" class="form-control" id="nombre" placeholder="">
+                    <input type="text" class="form-control" id="nombre" placeholder="">
                 </div>
                 <div class="mb-3">
                     <label for="celu" class="form-label">Celular:</label>
-                    <input type="email" class="form-control" id="celu" placeholder="">
+                    <input type="text" class="form-control" id="celu" placeholder="">
                 </div>
                 <div class="mb-3">
                     <label for="email" class="form-label">Email:</label>
@@ -36,7 +36,7 @@
                     <textarea class="form-control" id="texto" rows="3"></textarea>
                 </div>
                 <div class="mb-3">
-                    <button class="btn btn-primary" type="submit" disabled>Enviar</button>
+                    <button class="btn btn-primary" type="submit">Enviar</button>
                 </div>
             </form>
         </div>
@@ -46,6 +46,7 @@
     </footer>
 
     <script src="js/scripts.js"></script>
+    <script src="./js/validacion.js"></script>
 </body>
 
 </html>
