--- a/contacto.html
+++ b/contacto.html
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"> -->
 
     <title>Formulario</title>
 </head>
@@ -15,32 +18,44 @@
     <header id="header" class="sticky">
     </header>
 
-    <section class="pt-5 form mb-5">
-        <div
-            class="container rounded-4 col-xxl-4 col-xl-6 col-lg-6 col-md-8 col-sm-8 col-8 bg-secondary bg-opacity-50 mt-5">
-            <form class="py-4">
-                <div class="mb-3">
-                    <label for="nombre" class="form-label">Nombre:</label>
-                    <input type="email" class="form-control" id="nombre" placeholder="">
-                </div>
-                <div class="mb-3">
-                    <label for="celu" class="form-label">Celular:</label>
-                    <input type="email" class="form-control" id="celu" placeholder="">
-                </div>
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email:</label>
-                    <input type="email" class="form-control" id="email" placeholder="">
-                </div>
-                <div class="mb-3">
-                    <label for="texto" class="form-label">Comentario:</label>
-                    <textarea class="form-control" id="texto" rows="3"></textarea>
-                </div>
-                <div class="mb-3">
-                    <button class="btn btn-primary" type="submit" disabled>Enviar</button>
-                </div>
-            </form>
+    <h1 id="tit_form">Formulario de Contacto</h1>
+
+    <form id="formulario" onsubmit="return validarFormulario()">
+
+        <div>
+            <label for="nombre">Nombre:</label>
+            <input type="text" id="nombre" name="nombre" placeholder="">
         </div>
-    </section>
+
+        <div>
+            <label for="celu">Celular:</label>
+            <input type="text" id="celu" name="celular"  placeholder="">
+        </div>
+
+        <div>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email"  placeholder="">
+        </div>
+
+        <div>
+            <label for="texto">Comentario:</label>
+            <textarea id="texto" rows="3"></textarea>
+        </div>
+
+        <div><input type="submit" value="Enviar"></div>
+
+        <!--
+        <div>
+            <button class="btn btn-primary" type="submit" disabled>Enviar</button>
+        </div>
+        -->
+
+
+    </form>
+
+
+   
+
 
     <footer id="footer">
     </footer>
