cambie nombre en pestañas

--- a/contacto.html
+++ b/contacto.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="img/cross-arrows.ico" type="image/x-icon">
 
 
-    <title>Formulario</title>
+    <title>Contacto</title>
 </head>
 
 <body>
