--- a/joggings.html
+++ b/joggings.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="icon" href="img/cross-arrows.ico" type="image/x-icon">
 
-    <title>TPO</title>
+    <title>Joggings</title>
 </head>
 
 <body>
