--- a/ubicacion.html
+++ b/ubicacion.html
@@ -6,26 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="icon" href="img/cross-arrows.ico" type="image/x-icon">
+
     <title>Ubicación</title>
 </head>
 
 <body>
-    <header>
-        <div class="box box_izq">
-            <img src="img/cross-arrows.png" alt="">
-        </div>
-        <div class="box box_der">
-            <navbar>
-                <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="chombas.html">Chombas</a></li>
-                    <li><a href="remeras.html">Remeras</a></li>
-                    <li><a href="joggings.html">Jogging</a></li>
-                    <li><a href="ubicacion.html">Ubicación</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                </ul>
-            </navbar>
 
+    <header id="header" class="sticky">
     </header>
 
     <h1>Ubicación</h1>
@@ -37,6 +27,11 @@
             width="600" height="450" style="border:0;" allowfullscreen=""></iframe>
     </div>
     <p>Av. Nazca y Av. Avellaneda - CABA</p>
+
+    <footer id="footer">
+    </footer>
+
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
