--- a/contacto.html
+++ b/contacto.html
@@ -7,11 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="icon" href="img/cross-arrows.ico" type="image/x-icon">
 
-
-    <title>Contacto</title>
+    <title>Formulario</title>
 </head>
 
 <body>
@@ -21,7 +18,7 @@
     <section class="pt-5 form mb-5">
         <div
             class="container rounded-4 col-xxl-4 col-xl-6 col-lg-6 col-md-8 col-sm-8 col-8 bg-secondary bg-opacity-50 mt-5">
-            <form class="py-4">
+            <form class="py-4 p-3">
                 <div class="mb-3">
                     <label for="nombre" class="form-label">Nombre:</label>
                     <input type="text" class="form-control" id="nombre" placeholder="">
@@ -38,10 +35,11 @@
                     <label for="texto" class="form-label">Comentario:</label>
                     <textarea class="form-control" id="texto" rows="3"></textarea>
                 </div>
-                <div class="mb-3">
+                <div class="mb-1">
                     <button class="btn btn-primary" type="submit">Enviar</button>
                 </div>
             </form>
+            <div id="mensaje" class="text-center pb-3"></div>
         </div>
     </section>
 
