agregue consumo API

--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
                 <a href=""><img src="img/Joggins.png" />Jogging</a>
             </div>
         </div>
+        <h2>
+            Compra: <span id='compra'></span>
+        </h2>
+        <h2>
+            Venta: <span id='venta'></span>
+        </h2>
+          </div>
     </section>
 
     <footer id="footer">
