--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             </div>
         </div>
         <h2>
-            Compra: <span id='compra'></span>
+            Dolar Blue cotización Compra: $<span id='compra'></span>
         </h2>
         <h2>
-            Venta: <span id='venta'></span>
+            Dolar Blue cotización Venta: $<span id='venta'></span>
         </h2>
           </div>
     </section>
