--- a/index.html
+++ b/index.html
@@ -34,13 +34,14 @@
                 <a href=""><img src="img/Joggins.png" />Jogging</a>
             </div>
         </div>
-        <h2>
-            Dolar Blue cotización Compra: $<span id='compra'></span>
-        </h2>
-        <h2>
-            Dolar Blue cotización Venta: $<span id='venta'></span>
-        </h2>
-          </div>
+        <div id="dolar">
+            <h2>
+                Dolar Blue cotización Compra: $<span id='compra'></span>
+            </h2>
+            <h2>
+                Dolar Blue cotización Venta: $<span id='venta'></span>
+            </h2>
+        </div>
     </section>
 
     <footer id="footer">
