--- a/ubicacion.html
+++ b/ubicacion.html
@@ -22,11 +22,13 @@
     <p>¡Vení a conocer nuestro local, nuestras promociones presenciales y retirar tus pedidos!</p>
 
     <div class="mapa">
+
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d345.0949340786914!2d-58.47145797403598!3d-34.62653891293261!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc98dad4ee4e9%3A0xaaf1ea6130b197d3!2sAv.%20Avellaneda%20%26%20Nazca%2C%20Buenos%20Aires!5e0!3m2!1sen!2sar!4v1682174333890!5m2!1sen!2sar"
             width="600" height="450" style="border:0;" allowfullscreen=""></iframe>
     </div>
     <p>Av. Nazca y Av. Avellaneda - CABA</p>
+    <div id="clima"></div>
 
     <footer id="footer">
     </footer>
